# TUW-master-thesis

./: README.md
doc/: README.md  brainstorm.md  experiments.md  federated_inference_wasm.md  literature.md  notes.md  papers.md  related_work.md  roadmap.md  todo.md  topic.md  topic_v2.md
doc/decisions/: 1.1-inference-framework.md  1.2-inference-backend.md  1.3-communication-protocol.md  1.3-wasm-runtime.md  TEMPLATE.md
foundation/onnx_distributed_inference/: .gitignore  README.md  graph.js  package-lock.json  package.json  server.js
foundation/onnx_distributed_inference/server/: .gitignore  Cargo.toml  build.rs  data_p1.json  graph.ts  package-lock.json  package.json  server.js
foundation/onnx_distributed_inference/server/src/: graph.rs  main.rs  protos.rs
foundation/onnx_model_splitting/: .gitignore  pyproject.toml
foundation/onnx_model_splitting/src/: test_model_output.py
foundation/onnx_model_splitting/src/gemma3/: convert_to_onnx.py  convert_to_onnx_optimum.py  optimize_model.py  split_model.py  test_model.py
foundation/onnx_model_splitting/src/gemma3/convert/: convert_to_onnx_kv.py  convert_to_onnx_torch.py
foundation/onnx_model_splitting/src/gpt2/: convert_to_onnx.py  optimize_model.py  split_model.py  test_model.py
foundation/onnx_model_splitting/src/gpt2/convert/: convert_to_onnx_optimum.py  convert_to_onnx_torch.py  convert_to_onnx_transformers.py
foundation/onnx_model_splitting/src/phi/: quantize.py  split_model.py
foundation/onnx_model_splitting/src/phi/convert/: convert_to_onnx_optimum.py  convert_to_onnx_torch.py
(+57 files in other folders)
