[project]
name = "onnx_model_splitting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "onnx>=1.17.0",
    "onnxoptimizer>=0.3.13",
    "onnxruntime>=1.21.0",
    "optimum[exporters]>=1.25.0.dev0",
    "transformers>=4.51.0",
]

[tool.uv.sources]
optimum = { git = "https://github.com/huggingface/optimum.git" }
