[package]
name = "distributed_inference_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.45.0", features = ["full"] }
tokenizers = { version = "0.21.1", features = ["http"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "cors"] }
futures-util = "0.3.31"
